fix: overflow on pricing card

--- a/src/css/pricing.css
+++ b/src/css/pricing.css
@@ -23,6 +23,7 @@
 
 .pricing .box {
 	padding: 0;
+	overflow: hidden;
 }
 
 .pricing .plan__wrapper {
